--- a/src/index.css
+++ b/src/index.css
@@ -15,6 +15,14 @@ div#root {
     width: 100%;
 }
 
+a {
+    cursor: pointer;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
 body {
     background-attachment: fixed;
     background-image: url("./assets/pizza_bakgrund.jpeg");
@@ -33,8 +41,8 @@ body {
 }
 
 .header li h1 {
-    font-size: 2.75em;
     padding: 0.25em;
+    font-size: 2.75em;
     text-align: center;
     color: black;
 }
@@ -102,6 +110,8 @@ main {
     flex-direction: column;
     width: 100%;
     margin-bottom: 1em;
+    border-radius: 10px;
+    background-color: rgb(255, 255, 255, 0.33);
     gap: 1em;
 }
 
@@ -134,6 +144,7 @@ main {
 
 .menu-content {
     display: flex;
+    z-index: 1;
     padding: 1em;
     border-radius: 10px;
     background-color: rgb(255, 255, 255, 0.8);
@@ -179,7 +190,108 @@ footer {
     font-weight: 700;
     text-align: center;
     color: white;
-    cursor: pointer;
+}
+
+.scroll-to-top-button:hover {
+    text-decoration: underline;
+}
+
+/* Om oss */
+
+.om-oss {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    padding: 1em;
+}
+
+.om-oss h3 {
+    font-size: 1.5em;
+    text-align: center;
+}
+
+.info-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    padding: 1em 1em 3em 1em;
+    border-radius: 10px;
+    background-color: rgb(255, 255, 255, 0.8);
+    gap: 1em;
+}
+
+.info-container h2 {
+    font-size: 2.5em;
+    text-align: center;
+}
+
+.left-col {
+    display: flex;
+    flex-direction: column;
+    gap: 1em;
+}
+
+.info-container img {
+    width: 100%;
+    padding-bottom: 1em;
+    border-radius: 10px;
+}
+
+.info {
+    display: flex;
+    flex-direction: column;
+}
+
+.phone-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+}
+
+.phone-container a {
+    display: flex;
+    align-items: center;
+    gap: 0.5ch;
+}
+
+.address {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    gap: 1em;
+}
+
+iframe {
+    width: 100%;
+    border: none;
+    border-radius: 10px;
+    aspect-ratio: 7.08/4;
+}
+
+.tider {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+
+tr {
+    display: flex;
+    justify-content: space-between;
+    gap: 1em;
+}
+
+.tider p {
+    text-align: center;
+}
+
+.smaklig {
+    font-size: 3em;
+    text-align: center;
 }
 
 @media (min-width: 480px) {
@@ -203,5 +315,27 @@ footer {
 
     .category-link {
         width: 480px;
+    }
+}
+
+@media (min-width: 769px) {
+    .om-oss h3 {
+        font-size: 2em;
+    }
+
+    .info {
+        flex-direction: row;
+        justify-content: space-between;
+        gap: 1em;
+    }
+
+    .left-col {
+        width: 50%;
+    }
+
+    .right-col {
+        width: 50%;
+        display: flex;
+        flex-direction: column;
     }
 }
